# toolboxes-demo

./: README.md  index.html  package-lock.json  package.json  presenter-notes.md  tailwind.config.ts
.github/: copilot-instructions.md
server/: .env.example  README.md  create_toolbox.py  main.py  pyproject.toml
server/src/: config.py
server/src/router/: agents.py  evaluate.py
server/src/utils/: foundry_agents.py
src/: Presentation.tsx  index.css
src/components/slides/agent-toolbox-compare/: api.ts  data.ts  hooks.ts  main.tsx  simulate.ts  types.ts
src/components/slides/agent-toolbox-compare/components/: eval-badge.tsx  query-input.tsx  query-panel.tsx
src/components/slides/build-and-consume/: main.tsx
src/components/slides/build-once-consume-anywhere/: main.tsx
src/components/slides/tool-sprawl-problem/: main.tsx
src/components/slides/toolboxes-intro/: main.tsx
src/components/slides/use-case-one-toolbox-many-agents/: main.tsx
src/components/slides/value-and-get-started/: main.tsx
src/components/slides/what-is-a-toolbox/: main.tsx
src/components/ui/: brand-lockup.tsx
src/lib/: api.ts
