[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "fastapi[standard]>=0.136.3",
    "python-dotenv>=1.2.2",
    "agent-framework>=1.10.0",
    "agent-framework-foundry>=1.10.0",
    "azure-ai-projects>=2.3.0",
    "azure-ai-evaluation>=1.17.0",
    "mcp>=1.28.1",
]
